--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
     <title>My First Form</title>
   </head>
   <body>
-    <form action="przetwarzaj.php" method="post">
+    <form action="przetwarzaj.php" method="get">
       <!-- Sprawdz, czym sie rozni method=get . -->
       My name is: <input type="text" name="YourName"> <br> <br>
       My favorite word is: <input type="text" name="FavoriteWord"> <br> <br>
