--- a/login.html
+++ b/login.html
@@ -1,14 +1,14 @@
-<html>
-  <head>
-    <title>My First Form</title>
-  </head>
-  <body>
-    <form action="przetwarzaj.php" method="get">
-      <!-- Sprawdz, czym sie rozni method=get . -->
-      My name is: <input type="text" name="YourName"> <br> <br>
-      My favorite word is: <input type="text" name="FavoriteWord"> <br> <br>
-      <input type="submit" name="SubmitButton" value="That's Right!">
-    </form>
-  </body>
-</html>
-
+<HTML>
+  <HEAD>
+    <TITLE>Genealogia matematyczna - Logowanie</TITLE>
+    <META HTTP-EQUIV="content-type" CONTENT="text/html" CHARSET="utf-8">
+  </HEAD>
+  <BODY>
+    <H2> Logowanie </H2>
+    <FORM ACTION="naukowcy.php" METHOD="POST">  
+      Użytkownik: <INPUT TYPE="TEXT" NAME="LOGN" VALUE=""><BR><BR>
+      Hasło: <INPUT TYPE="PASSWORD" NAME="PASW" VALUE=""><BR><BR>
+      <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
+    </FORM>
+  </BODY>
+</HTML>
