--- a/login_library.html
+++ b/login_library.html
@@ -5,7 +5,7 @@
   </HEAD>
   <BODY>
     <H2> Logowanie </H2>
-    <FORM ACTION="naukowcy.php" METHOD="POST">  
+    <FORM ACTION="main_page.php" METHOD="POST">  
       Użytkownik: <INPUT TYPE="TEXT" NAME="LOGN" VALUE=""><BR><BR>
       Hasło: <INPUT TYPE="PASSWORD" NAME="PASW" VALUE=""><BR><BR>
       <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
