--- a/login_library.html
+++ b/login_library.html
@@ -8,6 +8,7 @@
     <FORM ACTION="main_page.php" METHOD="POST">  
       Użytkownik: <INPUT TYPE="TEXT" NAME="LOGN" VALUE=""><BR><BR>
       Hasło: <INPUT TYPE="PASSWORD" NAME="PASW" VALUE=""><BR><BR>
+      ID czytelnika (opcjonalne): <INPUT TYPE="NUMBER" NAME="USER" VALUE=""><BR><BR>
       <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
     </FORM>
   </BODY>
