--- a/login.html
+++ b/login.html
@@ -2,10 +2,11 @@
   <HEAD>
     <TITLE>Genealogia matematyczna - Logowanie</TITLE>
     <META HTTP-EQUIV="content-type" CONTENT="text/html" CHARSET="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </HEAD>
   <BODY>
     <H2> Logowanie </H2>
-    <FORM ACTION="main_page.php" METHOD="POST">  
+    <FORM ACTION="main_page.php" METHOD="POST">
       Użytkownik: <INPUT TYPE="TEXT" NAME="LOGN" VALUE=""><BR><BR>
       Hasło: <INPUT TYPE="PASSWORD" NAME="PASW" VALUE=""><BR><BR>
       <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
