--- a/login_library.html
+++ b/login_library.html
@@ -2,6 +2,7 @@
   <HEAD>
     <TITLE>Genealogia matematyczna - Logowanie</TITLE>
     <META HTTP-EQUIV="content-type" CONTENT="text/html" CHARSET="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </HEAD>
   <BODY>
     <H2> Logowanie </H2>
