--- a/proba.html
+++ b/proba.html
@@ -2,6 +2,12 @@
 <head>
     <title>Page Title</title>
     <link rel="stylesheet" href="css/main.css">
+    <style>
+        body {
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 0;
+        }
+    </style>
 </head>
 <body>
 
