--- a/proba.html
+++ b/proba.html
@@ -3,9 +3,18 @@
     <title>Page Title</title>
     <link rel="stylesheet" href="css/main.css">
     <style>
-        body {
-        font-family: Arial, Helvetica, sans-serif;
-        margin: 0;
+
+        /* Style the header */
+        .header {
+        padding: 80px;
+        text-align: center;
+        background: #1abc9c;
+        color: white;
+        }
+
+        /* Increase the font size of the h1 element */
+        .header h1 {
+        font-size: 40px;
         }
     </style>
 </head>
