--- a/proba.html
+++ b/proba.html
@@ -3,6 +3,10 @@
     <title>Page Title</title>
     <link rel="stylesheet" href="css/main.css">
     <style>
+        body {
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 0;
+        }
 
         /* Style the header */
         .header {
