--- a/login_library.html
+++ b/login_library.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="css/main.css">
   </HEAD>
   <BODY>
-    <H1> Logowanie </H1>
+    <div class="header">
+      <h1>Logowanie</h1>
+    </div>
     <FORM ACTION="main_page.php" METHOD="POST">
       ID czytelnika (opcjonalne): <INPUT TYPE="NUMBER" NAME="USER" VALUE=""><BR><BR>
       <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
