--- a/login_library.html
+++ b/login_library.html
@@ -8,6 +8,13 @@
     <div class="header">
       <h1>Logowanie</h1>
     </div>
+
+    <div class="container">
+      <label for="uname"><b>ID czytelnika</b></label>
+      <input type="text" placeholder="Wprowadź ID czytelnika" name="uname" required>    
+      <button type="submit">Login</button>
+    </div>
+
     <FORM ACTION="main_page.php" METHOD="POST">
       ID czytelnika (opcjonalne): <INPUT TYPE="NUMBER" NAME="USER" VALUE=""><BR><BR>
       <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
