--- a/login_library.html
+++ b/login_library.html
@@ -10,9 +10,11 @@
     </div>
 
     <div class="container">
-      <label for="uname"><b>ID czytelnika</b></label>
-      <input type="text" placeholder="Wprowadź ID czytelnika" name="uname" required>    
-      <button type="submit">Login</button>
+      <FORM ACTION="main_page.php" METHOD="POST"></FORM>
+        <label for="uname"><b>ID czytelnika</b></label>
+        <input type="text" placeholder="Wprowadź ID czytelnika" name="uname" required>    
+        <button type="submit">Login</button>
+      </FORM>
     </div>
 
     <FORM ACTION="main_page.php" METHOD="POST">
