--- a/login_library.html
+++ b/login_library.html
@@ -13,7 +13,7 @@
       <FORM ACTION="main_page.php" METHOD="POST"></FORM>
         <label for="uname"><b>ID czytelnika</b></label>
         <input type="text" placeholder="Wprowadź ID czytelnika" name="uname" required>    
-        <button type="submit">Login</button>
+        <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
       </FORM>
     </div>
 
