--- a/login_library.html
+++ b/login_library.html
@@ -12,7 +12,7 @@
     <div class="container">
       <FORM ACTION="main_page.php" METHOD="POST"></FORM>
         <label for="uname"><b>ID czytelnika</b></label>
-        <input type="text" placeholder="Wprowadź ID czytelnika" name="uname" required>    
+        <input type="text" placeholder="Wprowadź ID czytelnika" name="USER" value="">    
         <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
       </FORM>
     </div>
