--- a/login_library.html
+++ b/login_library.html
@@ -10,8 +10,7 @@
     </div>
 
     <div class="container">
-      <FORM ACTION="main_page.php" METHOD="POST"></FORM>
-        <label for="uname"><b>ID czytelnika</b></label>
+      <FORM ACTION="main_page.php" METHOD="POST">
         <input type="text" placeholder="Wprowadź ID czytelnika" name="USER" value="">    
         <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
       </FORM>
