--- a/login_library.html
+++ b/login_library.html
@@ -3,6 +3,7 @@
     <TITLE>Logowanie</TITLE>
     <META HTTP-EQUIV="content-type" CONTENT="text/html" CHARSET="utf-8">
     <link rel="stylesheet" href="css/main.css">
+    <meta charset="utf-8">
   </HEAD>
   <BODY>
     <div class="header">
