--- a/login_library.html
+++ b/login_library.html
@@ -16,6 +16,13 @@
         <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
       </FORM>
     </div>
-
+    <div class="footer">
+      <p style="text-align:left;">
+        Biblioteka Publiczna im. Ignacego Makowskiego i Joanny Dagil
+        <span style="float:right;">
+        All rights reserved
+        </span>
+      </p>
+    </div>
   </BODY>
 </HTML>
