--- a/login_library.html
+++ b/login_library.html
@@ -15,6 +15,9 @@
         <input type="text" placeholder="Wprowadź ID czytelnika" name="USER" value="">    
         <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
       </FORM>
+      <FORM ACTION="register.php" METHOD="POST">    
+        <INPUT TYPE="SUBMIT" VALUE="Zarejestruj">
+      </FORM>
     </div>
     <div class="footer">
       <p style="text-align:left;">
