--- a/login_library.html
+++ b/login_library.html
@@ -12,10 +12,13 @@
 
     <div class="container">
       <FORM ACTION="main_page.php" METHOD="POST">
-        <input type="text" placeholder="Wprowadź ID czytelnika" name="USER" value="">    
+        <input type="text" placeholder="Wprowadź ID czytelnika" name="USER" value="">
         <INPUT TYPE="SUBMIT" VALUE="Zaloguj">
       </FORM>
-      <FORM ACTION="register.php" METHOD="POST">    
+      <FORM ACTION="signout.php" METHOD="POST">
+        <INPUT TYPE="SUBMIT" VALUE="Wyloguj">
+      </FORM>
+      <FORM ACTION="register.php" METHOD="POST">
         <INPUT TYPE="SUBMIT" VALUE="Zarejestruj">
       </FORM>
     </div>
